--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,8 +4,10 @@
 .card-columns-custom {
   column-count: 2;
   column-gap: 1.25rem;
+  orphans: 1;
+  widows: 1;
   
-  .card {
+  /* .card {
     margin-bottom: $card-columns-margin;
   }
 
@@ -19,7 +21,7 @@
       display: inline-block; // Don't let them vertically span multiple columns
       width: 100%; // Don't let their width change
     }
-  }
+  } */
 }
 
 
